replace svg with png to avoid squished img on some screens

--- a/css/app.css
+++ b/css/app.css
@@ -12,7 +12,7 @@
     }
     
     nav {
-        margin: 0 33%;
+        margin: 0 28%;
     }
 }
 
